--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "doctrine/dbal": "2.5.1",
         "fideloper/proxy": "^4.0",
+        "intervention/image": "^2.5",
+        "intervention/imagecache": "^2.3",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0",
-        "doctrine/dbal": "2.5.1"
+        "laravel/tinker": "^1.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
